fix overflow

--- a/frontend/src/components/layouts/MainLayout.css
+++ b/frontend/src/components/layouts/MainLayout.css
@@ -12,6 +12,7 @@
     background: #2E4F4F;
     border: 1px solid #000000;
     overflow-x: hidden;
+    overflow-y: hidden;
     padding-top: 20px;
 }
 
